--- a/DBLab.ipynb
+++ b/DBLab.ipynb
@@ -2,8 +2,124 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "314dacf4-a42e-4ff1-a74c-72cccf8fd093",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, when, count\n",
+    "import time\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a228252-405c-45e3-9b8e-44e3182fec3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Both Dataframe and RDD implementations are to use 4 spark executors\n",
+    "\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"Query1 DataFrame API\") \\\n",
+    "    .config(\"spark.executor.instances\", \"4\") \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "03e83166-6544-4c45-89df-2fbd6459f7aa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+-----+\n",
+      "|    AgeGroup|Count|\n",
+      "+------------+-----+\n",
+      "|      Adults|72610|\n",
+      "|Young Adults|23472|\n",
+      "|    Children|10724|\n",
+      "|     Seniors| 3099|\n",
+      "+------------+-----+\n",
+      "\n",
+      "Execution Time (DataFrame API): 19.31 seconds"
+     ]
+    }
+   ],
+   "source": [
+    "# Query1 Dataframe implementation\n",
+    "\n",
+    "# Start timer\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Load Crime Data\n",
+    "crime_data = spark.read.csv(\"s3://initial-notebook-data-bucket-dblab-905418150721/CrimeData/Crime_Data_from_2010_to_2019_20241101.csv\", header=True, inferSchema=True)\n",
+    "\n",
+    "# Filter for \"AGGRAVATED ASSAULT\"\n",
+    "assault_data = crime_data.filter(col(\"Crm Cd Desc\").contains(\"AGGRAVATED ASSAULT\"))\n",
+    "\n",
+    "# Age Groups\n",
+    "categorized = assault_data.withColumn(\n",
+    "    \"AgeGroup\",\n",
+    "    when(col(\"Vict Age\") < 18, \"Children\")\n",
+    "    .when((col(\"Vict Age\") >= 18) & (col(\"Vict Age\") <= 24), \"Young Adults\")\n",
+    "    .when((col(\"Vict Age\") >= 25) & (col(\"Vict Age\") <= 64), \"Adults\")\n",
+    "    .when(col(\"Vict Age\") > 64, \"Seniors\")\n",
+    ")\n",
+    "\n",
+    "# Group and count\n",
+    "result_df = categorized.groupBy(\"AgeGroup\").agg(count(\"*\").alias(\"Count\")).orderBy(col(\"Count\").desc())\n",
+    "\n",
+    "#Show results\n",
+    "result_df.show()\n",
+    "\n",
+    "# Stop timer and print elapsed time\n",
+    "elapsed_time = time.time() - start_time\n",
+    "print(f\"Execution Time (DataFrame API): {elapsed_time:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5ccd071f-5afa-4402-8c4b-8241a9655034",
    "metadata": {
     "tags": []
    },
@@ -64,68 +180,104 @@
       "| 70309629|08/09/2010 12:00:...|08/09/2010 12:00:...|    1515|   13|   Newton|       1324|       2|   946|OTHER MISCELLANEO...|          0344|       0|       M|           H|      103|               ALLEY|          NULL|                NULL|    IC| Invest Cont|     946|    NULL|    NULL|    NULL|1300 E  21ST     ...|                NULL|34.0224|-118.2524|\n",
       "| 90631215|01/05/2010 12:00:...|01/05/2010 12:00:...|     150|    6|Hollywood|        646|       2|   900|VIOLATION OF COUR...|1100 0400 1402|      47|       F|           W|      101|              STREET|           102|            HAND GUN|    IC| Invest Cont|     900|     998|    NULL|    NULL|CAHUENGA         ...|HOLLYWOOD        ...|34.1016|-118.3295|\n",
       "|100100501|01/03/2010 12:00:...|01/02/2010 12:00:...|    2100|    1|  Central|        176|       1|   122|     RAPE, ATTEMPTED|          0400|      47|       F|           H|      103|               ALLEY|           400|STRONG-ARM (HANDS...|    IC| Invest Cont|     122|    NULL|    NULL|    NULL|8TH              ...|SAN PEDRO        ...|34.0387|-118.2488|\n",
+      "|100100506|01/05/2010 12:00:...|01/04/2010 12:00:...|    1650|    1|  Central|        162|       1|   442|SHOPLIFTING - PET...|     0344 1402|      23|       M|           B|      404|    DEPARTMENT STORE|          NULL|                NULL|    AA|Adult Arrest|     442|    NULL|    NULL|    NULL|700 W  7TH       ...|                NULL| 34.048|-118.2577|\n",
+      "|100100508|01/08/2010 12:00:...|01/07/2010 12:00:...|    2005|    1|  Central|        182|       1|   330|BURGLARY FROM VEH...|          0344|      46|       M|           H|      101|              STREET|          NULL|                NULL|    IC| Invest Cont|     330|    NULL|    NULL|    NULL|PICO             ...|GRAND            ...|34.0389|-118.2643|\n",
+      "|100100509|01/09/2010 12:00:...|01/08/2010 12:00:...|    2100|    1|  Central|        157|       1|   230|ASSAULT WITH DEAD...|          0416|      51|       M|           B|      710|       OTHER PREMISE|           500|UNKNOWN WEAPON/OT...|    AA|Adult Arrest|     230|    NULL|    NULL|    NULL|500    CROCKER   ...|                NULL|34.0435|-118.2427|\n",
+      "|100100510|01/09/2010 12:00:...|01/09/2010 12:00:...|     230|    1|  Central|        171|       1|   230|ASSAULT WITH DEAD...|     0400 0416|      30|       M|           H|      108|         PARKING LOT|           400|STRONG-ARM (HANDS...|    IC| Invest Cont|     230|    NULL|    NULL|    NULL|800 W  OLYMPIC   ...|                NULL| 34.045| -118.264|\n",
+      "|100100511|01/09/2010 12:00:...|01/06/2010 12:00:...|    2100|    1|  Central|        132|       1|   341|THEFT-GRAND ($950...|     0344 1402|      55|       M|           W|      710|       OTHER PREMISE|          NULL|                NULL|    IC| Invest Cont|     341|     998|    NULL|    NULL|200 S  OLIVE     ...|                NULL|34.0538|-118.2488|\n",
       "+---------+--------------------+--------------------+--------+-----+---------+-----------+--------+------+--------------------+--------------+--------+--------+------------+---------+--------------------+--------------+--------------------+------+------------+--------+--------+--------+--------+--------------------+--------------------+-------+---------+\n",
-      "only showing top 5 rows"
+      "only showing top 10 rows"
      ]
     }
    ],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col, when, count\n",
-    "\n",
-    "# Initialize Spark session\n",
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"DBLab\") \\\n",
-    "    .getOrCreate()\n",
-    "\n",
-    "# Verify Spark session\n",
-    "spark.version\n",
-    "\n",
-    "# Load dataset from S3\n",
-    "crime_data = spark.read.csv(\n",
-    "    \"s3://initial-notebook-data-bucket-dblab-905418150721/CrimeData/Crime_Data_from_2010_to_2019_20241101.csv\", \n",
-    "    header=True, inferSchema=True\n",
-    ")\n",
-    "\n",
-    "# Show dataset schema\n",
+    "# Show dataset schema to find indexes for RDD\n",
     "crime_data.printSchema()\n",
     "\n",
     "# Display sample rows\n",
-    "crime_data.show(5)"
+    "crime_data.show(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03e83166-6544-4c45-89df-2fbd6459f7aa",
+   "execution_count": 33,
+   "id": "0816e675-e0fc-416a-9d2a-48c3655e522f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adults: 72610\n",
+      "Young Adults: 23472\n",
+      "Children: 10724\n",
+      "Seniors: 3099\n",
+      "Execution Time (RDD API): 21.01 seconds"
+     ]
+    }
+   ],
    "source": [
+    "#Query 1 RDD implementation\n",
+    "\n",
+    "# Start timer\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Load dataset as RDD\n",
+    "crime_rdd = spark.sparkContext.textFile(\"s3://initial-notebook-data-bucket-dblab-905418150721/CrimeData/Crime_Data_from_2010_to_2019_20241101.csv\")\n",
+    "\n",
+    "# Extract header and filter it out\n",
+    "header = crime_rdd.first()\n",
+    "crime_rdd = crime_rdd.filter(lambda row: row != header)\n",
+    "\n",
+    "# Parse CSV rows\n",
+    "def parse_csv(line):\n",
+    "    return list(csv.reader([line]))[0]\n",
+    "\n",
+    "parsed_rdd = crime_rdd.map(parse_csv)\n",
+    "\n",
     "# Filter for \"AGGRAVATED ASSAULT\"\n",
-    "assault_data = crime_data.filter(col(\"Crm Cd Desc\").contains(\"AGGRAVATED ASSAULT\"))\n",
+    "assault_rdd = parsed_rdd.filter(lambda row: \"AGGRAVATED ASSAULT\" in row[9])\n",
     "\n",
-    "# Categorize age groups\n",
-    "categorized = assault_data.withColumn(\n",
-    "    \"AgeGroup\",\n",
-    "    when(col(\"Vict Age\") < 18, \"Children\")\n",
-    "    .when((col(\"Vict Age\") >= 18) & (col(\"Vict Age\") <= 24), \"Young Adults\")\n",
-    "    .when((col(\"Vict Age\") >= 25) & (col(\"Vict Age\") <= 64), \"Adults\")\n",
-    "    .when(col(\"Vict Age\") > 64, \"Seniors\")\n",
-    ")\n",
+    "# Age groups\n",
+    "age_group_rdd = assault_rdd.map(lambda row: (\n",
+    "    \"Children\" if int(row[11]) < 18 else\n",
+    "    \"Young Adults\" if 18 <= int(row[11]) <= 24 else\n",
+    "    \"Adults\" if 25 <= int(row[11]) <= 64 else\n",
+    "    \"Seniors\"\n",
+    "))\n",
     "\n",
-    "# Group by age groups and count\n",
-    "result = categorized.groupBy(\"AgeGroup\").agg(count(\"*\").alias(\"Count\")).orderBy(col(\"Count\").desc())\n",
+    "# Group and count\n",
+    "result_rdd = age_group_rdd.map(lambda group: (group, 1)).reduceByKey(lambda a, b: a + b).sortBy(lambda x: x[1], ascending=False)\n",
     "\n",
     "# Show results\n",
-    "result.show()\n"
+    "for group, count in result_rdd.collect():\n",
+    "    print(f\"{group}: {count}\")\n",
+    "\n",
+    "# Stop timer and print elapsed time\n",
+    "elapsed_time = time.time() - start_time\n",
+    "print(f\"Execution Time (RDD API): {elapsed_time:.2f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c426da1-e9d3-4295-aa09-d62a35307caf",
+   "id": "b5bc34a8-d09c-4a4a-a359-ef40c2055201",
    "metadata": {},
    "outputs": [],
    "source": []
