--- a/DBLab.ipynb
+++ b/DBLab.ipynb
@@ -743,6 +743,7 @@
     }
    ],
    "source": [
+    "#parquet solution\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import expr\n",
     "import time\n",
